--- a/web/public/index.html
+++ b/web/public/index.html
@@ -39,5 +39,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      var original = window.onerror;
+      window.onerror = function(msg, url, linenumber) {
+          alert('Unhandled Error!\nMessage: '+msg+'\nURL: '+url+'\nLine Number: '+linenumber+"\nPlease report this to the developers!");
+          return original(msg, url, linenumber);
+      }
+    </script>
   </body>
 </html>
